--- a/css/style.css
+++ b/css/style.css
@@ -97,3 +97,11 @@ th {
     padding-right: 10px;
     padding-left: 10px;
 }
+
+
+.teamInfo {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
