--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@ th {
     margin-top: 50px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     justify-content: center;
 }
 
@@ -116,4 +116,9 @@ th {
 
 .squadList {
     list-style: none;
+}
+
+.squad {
+    display: flex;
+    flex-direction: row;
 }
